// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccordionItem open / close renders an item closed 1`] = `
<div>
  <div
    class="np-accordion-item np-accordion-item--light"
  >
    <button
      aria-label="This is title number one"
      class="np-option decision"
    >
      <div
        class="media"
      >
        <div
          class="media-body"
        >
          <div
            class="h5"
          >
            This is title number one
          </div>
        </div>
        <div
          class="media-right"
        >
          <span
            aria-hidden="true"
            class="tw-icon tw-icon-chevron-up tw-chevron chevron-color bottom"
            role="presentation"
          >
            <svg
              fill="currentColor"
              focusable="false"
              height="16"
              width="16"
            >
              <path
                clip-rule="evenodd"
                d="M8 4l-6.6 6.653L2.537 11.8 8 6.293l5.463 5.507 1.137-1.147L8 4z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`AccordionItem open / close renders an item open 1`] = `
<div>
  <div
    class="np-accordion-item np-accordion-item--light np-accordion-item--open"
  >
    <button
      aria-label="This is title number one"
      class="np-option decision"
    >
      <div
        class="media"
      >
        <div
          class="media-body"
        >
          <div
            class="h5"
          >
            This is title number one
          </div>
        </div>
        <div
          class="media-right"
        >
          <span
            aria-hidden="true"
            class="tw-icon tw-icon-chevron-up tw-chevron chevron-color top"
            role="presentation"
          >
            <svg
              fill="currentColor"
              focusable="false"
              height="16"
              width="16"
            >
              <path
                clip-rule="evenodd"
                d="M8 4l-6.6 6.653L2.537 11.8 8 6.293l5.463 5.507 1.137-1.147L8 4z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
      </div>
    </button>
    <div
      class="np-accordion-item__content"
    >
      Lauri Ipsum has been the industry standard dummy text ever since the 1500s.
    </div>
  </div>
</div>
`;
